--- a/Utils/uniteditor/uniteditor.lpi
+++ b/Utils/uniteditor/uniteditor.lpi
@@ -1,24 +1,15 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="9"/>
     <PathDelim Value="\"/>
+    <Version Value="7"/>
     <General>
       <MainUnit Value="0"/>
-      <ResourceType Value="res"/>
-      <UseXPManifest Value="True"/>
+      <TargetFileExt Value=".exe"/>
       <Icon Value="0"/>
-      <ActiveWindowIndexAtStart Value="0"/>
+      <UseXPManifest Value="True"/>
+      <ActiveEditorIndexAtStart Value="0"/>
     </General>
-    <i18n>
-      <EnableI18N LFM="False"/>
-    </i18n>
-    <VersionInfo>
-      <StringTable ProductVersion=""/>
-    </VersionInfo>
-    <BuildModes Count="1" Active="Default">
-      <Item1 Name="Default" Default="True"/>
-    </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
       <IncludeFileFilter Value="*.(pas|pp|inc|lfm|lpr|lrs|lpi|lpk|sh|xml)"/>
@@ -27,6 +18,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
+        <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
     <RequiredPackages Count="1">
@@ -34,12 +26,14 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="3">
+    <Units Count="5">
       <Unit0>
         <Filename Value="uniteditor.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="uniteditor"/>
-        <UsageCount Value="30"/>
+        <CursorPos X="2" Y="10"/>
+        <TopLine Value="1"/>
+        <UsageCount Value="31"/>
       </Unit0>
       <Unit1>
         <Filename Value="unit1.pas"/>
@@ -47,156 +41,160 @@
         <ComponentName Value="Form1"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <IsVisibleTab Value="True"/>
+        <CursorPos X="24" Y="40"/>
+        <TopLine Value="34"/>
         <EditorIndex Value="0"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="186"/>
-        <CursorPos X="68" Y="206"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="31"/>
         <Loaded Value="True"/>
-        <LoadedDesigner Value="True"/>
       </Unit1>
       <Unit2>
-        <Filename Value="C:\lazarus\fpc\2.4.2\source\rtl\inc\objpash.inc"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="215"/>
+        <Filename Value="..\..\..\..\lazarus\fpc\2.4.2\source\rtl\inc\objpash.inc"/>
         <CursorPos X="26" Y="230"/>
+        <TopLine Value="215"/>
         <UsageCount Value="10"/>
       </Unit2>
+      <Unit3>
+        <Filename Value="unit1.lrs"/>
+        <CursorPos X="1" Y="3"/>
+        <TopLine Value="1"/>
+        <UsageCount Value="10"/>
+      </Unit3>
+      <Unit4>
+        <Filename Value="..\..\KM_Defaults.pas"/>
+        <UnitName Value="KM_Defaults"/>
+        <CursorPos X="11" Y="357"/>
+        <TopLine Value="340"/>
+        <UsageCount Value="10"/>
+      </Unit4>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
         <Filename Value="unit1.pas"/>
-        <Caret Line="175" Column="20" TopLine="164"/>
+        <Caret Line="176" Column="20" TopLine="165"/>
       </Position1>
       <Position2>
         <Filename Value="unit1.pas"/>
-        <Caret Line="176" Column="20" TopLine="165"/>
+        <Caret Line="167" Column="38" TopLine="126"/>
       </Position2>
       <Position3>
         <Filename Value="unit1.pas"/>
-        <Caret Line="177" Column="20" TopLine="166"/>
+        <Caret Line="195" Column="5" TopLine="168"/>
       </Position3>
       <Position4>
         <Filename Value="unit1.pas"/>
-        <Caret Line="176" Column="20" TopLine="165"/>
+        <Caret Line="196" Column="5" TopLine="169"/>
       </Position4>
       <Position5>
         <Filename Value="unit1.pas"/>
-        <Caret Line="177" Column="20" TopLine="166"/>
+        <Caret Line="197" Column="5" TopLine="170"/>
       </Position5>
       <Position6>
         <Filename Value="unit1.pas"/>
-        <Caret Line="176" Column="20" TopLine="165"/>
+        <Caret Line="193" Column="47" TopLine="171"/>
       </Position6>
       <Position7>
         <Filename Value="unit1.pas"/>
-        <Caret Line="167" Column="38" TopLine="126"/>
+        <Caret Line="199" Column="5" TopLine="139"/>
       </Position7>
       <Position8>
         <Filename Value="unit1.pas"/>
-        <Caret Line="195" Column="5" TopLine="168"/>
+        <Caret Line="200" Column="5" TopLine="170"/>
       </Position8>
       <Position9>
         <Filename Value="unit1.pas"/>
-        <Caret Line="196" Column="5" TopLine="169"/>
+        <Caret Line="204" Column="39" TopLine="177"/>
       </Position9>
       <Position10>
         <Filename Value="unit1.pas"/>
-        <Caret Line="197" Column="5" TopLine="170"/>
+        <Caret Line="205" Column="39" TopLine="178"/>
       </Position10>
       <Position11>
         <Filename Value="unit1.pas"/>
-        <Caret Line="193" Column="47" TopLine="171"/>
+        <Caret Line="206" Column="39" TopLine="179"/>
       </Position11>
       <Position12>
         <Filename Value="unit1.pas"/>
-        <Caret Line="199" Column="5" TopLine="139"/>
+        <Caret Line="207" Column="39" TopLine="180"/>
       </Position12>
       <Position13>
         <Filename Value="unit1.pas"/>
-        <Caret Line="200" Column="5" TopLine="170"/>
+        <Caret Line="208" Column="39" TopLine="181"/>
       </Position13>
       <Position14>
         <Filename Value="unit1.pas"/>
-        <Caret Line="204" Column="39" TopLine="177"/>
+        <Caret Line="158" Column="50" TopLine="146"/>
       </Position14>
       <Position15>
         <Filename Value="unit1.pas"/>
-        <Caret Line="205" Column="39" TopLine="178"/>
+        <Caret Line="212" Column="43" TopLine="186"/>
       </Position15>
       <Position16>
         <Filename Value="unit1.pas"/>
-        <Caret Line="206" Column="39" TopLine="179"/>
+        <Caret Line="213" Column="43" TopLine="187"/>
       </Position16>
       <Position17>
         <Filename Value="unit1.pas"/>
-        <Caret Line="207" Column="39" TopLine="180"/>
+        <Caret Line="214" Column="43" TopLine="188"/>
       </Position17>
       <Position18>
         <Filename Value="unit1.pas"/>
-        <Caret Line="208" Column="39" TopLine="181"/>
+        <Caret Line="209" Column="19" TopLine="188"/>
       </Position18>
       <Position19>
         <Filename Value="unit1.pas"/>
-        <Caret Line="158" Column="50" TopLine="146"/>
+        <Caret Line="208" Column="19" TopLine="187"/>
       </Position19>
       <Position20>
         <Filename Value="unit1.pas"/>
-        <Caret Line="212" Column="43" TopLine="186"/>
+        <Caret Line="202" Column="18" TopLine="188"/>
       </Position20>
       <Position21>
         <Filename Value="unit1.pas"/>
-        <Caret Line="213" Column="43" TopLine="187"/>
+        <Caret Line="209" Column="15" TopLine="188"/>
       </Position21>
       <Position22>
         <Filename Value="unit1.pas"/>
-        <Caret Line="214" Column="43" TopLine="188"/>
+        <Caret Line="50" Column="21" TopLine="48"/>
       </Position22>
       <Position23>
         <Filename Value="unit1.pas"/>
-        <Caret Line="209" Column="19" TopLine="188"/>
+        <Caret Line="51" Column="21" TopLine="49"/>
       </Position23>
       <Position24>
         <Filename Value="unit1.pas"/>
-        <Caret Line="208" Column="19" TopLine="187"/>
+        <Caret Line="176" Column="24" TopLine="158"/>
       </Position24>
       <Position25>
         <Filename Value="unit1.pas"/>
-        <Caret Line="202" Column="18" TopLine="188"/>
+        <Caret Line="30" Column="44" TopLine="16"/>
       </Position25>
       <Position26>
         <Filename Value="unit1.pas"/>
-        <Caret Line="209" Column="15" TopLine="188"/>
+        <Caret Line="16" Column="87" TopLine="1"/>
       </Position26>
       <Position27>
         <Filename Value="unit1.pas"/>
-        <Caret Line="50" Column="21" TopLine="48"/>
+        <Caret Line="11" Column="1" TopLine="1"/>
       </Position27>
       <Position28>
         <Filename Value="unit1.pas"/>
-        <Caret Line="51" Column="21" TopLine="49"/>
+        <Caret Line="20" Column="14" TopLine="1"/>
       </Position28>
       <Position29>
         <Filename Value="unit1.pas"/>
-        <Caret Line="176" Column="24" TopLine="158"/>
+        <Caret Line="182" Column="41" TopLine="161"/>
       </Position29>
-      <Position30>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="30" Column="44" TopLine="16"/>
-      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="9"/>
+    <Version Value="8"/>
     <PathDelim Value="\"/>
     <Target>
       <Filename Value="uniteditor"/>
     </Target>
     <SearchPaths>
-      <IncludeFiles Value="$(ProjOutDir);..\..\Common"/>
-      <OtherUnitFiles Value="..\..\Common"/>
-      <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
+      <IncludeFiles Value="$(ProjOutDir)\;..\..\Common\"/>
+      <OtherUnitFiles Value="..\..\Common\"/>
     </SearchPaths>
     <Linking>
       <Options>
@@ -213,12 +211,6 @@
     </Other>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="1">
-      <Item1>
-        <Source Value="unit1.pas"/>
-        <Line Value="144"/>
-      </Item1>
-    </BreakPoints>
     <Exceptions Count="3">
       <Item1>
         <Name Value="EAbort"/>
