--- a/Utils/uniteditor/uniteditor.lpi
+++ b/Utils/uniteditor/uniteditor.lpi
@@ -18,7 +18,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
-        <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
+        <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T 'Lazarus Run Output' -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
     <RequiredPackages Count="1">
@@ -26,7 +26,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="5">
+    <Units Count="6">
       <Unit0>
         <Filename Value="uniteditor.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -41,8 +41,8 @@
         <ComponentName Value="Form1"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="24" Y="40"/>
-        <TopLine Value="34"/>
+        <CursorPos X="10" Y="131"/>
+        <TopLine Value="116"/>
         <EditorIndex Value="0"/>
         <UsageCount Value="31"/>
         <Loaded Value="True"/>
@@ -66,124 +66,109 @@
         <TopLine Value="340"/>
         <UsageCount Value="10"/>
       </Unit4>
+      <Unit5>
+        <Filename Value="..\..\Common\KromUtils.pas"/>
+        <UnitName Value="KromUtils"/>
+        <CursorPos X="20" Y="7"/>
+        <TopLine Value="1"/>
+        <EditorIndex Value="1"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit5>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="28">
+    <JumpHistory Count="23" HistoryIndex="22">
       <Position1>
         <Filename Value="unit1.pas"/>
-        <Caret Line="176" Column="20" TopLine="165"/>
+        <Caret Line="206" Column="39" TopLine="179"/>
       </Position1>
       <Position2>
         <Filename Value="unit1.pas"/>
-        <Caret Line="167" Column="38" TopLine="126"/>
+        <Caret Line="207" Column="39" TopLine="180"/>
       </Position2>
       <Position3>
         <Filename Value="unit1.pas"/>
-        <Caret Line="195" Column="5" TopLine="168"/>
+        <Caret Line="208" Column="39" TopLine="181"/>
       </Position3>
       <Position4>
         <Filename Value="unit1.pas"/>
-        <Caret Line="196" Column="5" TopLine="169"/>
+        <Caret Line="158" Column="50" TopLine="146"/>
       </Position4>
       <Position5>
         <Filename Value="unit1.pas"/>
-        <Caret Line="197" Column="5" TopLine="170"/>
+        <Caret Line="212" Column="43" TopLine="186"/>
       </Position5>
       <Position6>
         <Filename Value="unit1.pas"/>
-        <Caret Line="193" Column="47" TopLine="171"/>
+        <Caret Line="213" Column="43" TopLine="187"/>
       </Position6>
       <Position7>
         <Filename Value="unit1.pas"/>
-        <Caret Line="199" Column="5" TopLine="139"/>
+        <Caret Line="214" Column="43" TopLine="188"/>
       </Position7>
       <Position8>
         <Filename Value="unit1.pas"/>
-        <Caret Line="200" Column="5" TopLine="170"/>
+        <Caret Line="209" Column="19" TopLine="188"/>
       </Position8>
       <Position9>
         <Filename Value="unit1.pas"/>
-        <Caret Line="204" Column="39" TopLine="177"/>
+        <Caret Line="208" Column="19" TopLine="187"/>
       </Position9>
       <Position10>
         <Filename Value="unit1.pas"/>
-        <Caret Line="205" Column="39" TopLine="178"/>
+        <Caret Line="202" Column="18" TopLine="188"/>
       </Position10>
       <Position11>
         <Filename Value="unit1.pas"/>
-        <Caret Line="206" Column="39" TopLine="179"/>
+        <Caret Line="209" Column="15" TopLine="188"/>
       </Position11>
       <Position12>
         <Filename Value="unit1.pas"/>
-        <Caret Line="207" Column="39" TopLine="180"/>
+        <Caret Line="50" Column="21" TopLine="48"/>
       </Position12>
       <Position13>
         <Filename Value="unit1.pas"/>
-        <Caret Line="208" Column="39" TopLine="181"/>
+        <Caret Line="51" Column="21" TopLine="49"/>
       </Position13>
       <Position14>
         <Filename Value="unit1.pas"/>
-        <Caret Line="158" Column="50" TopLine="146"/>
+        <Caret Line="176" Column="24" TopLine="158"/>
       </Position14>
       <Position15>
         <Filename Value="unit1.pas"/>
-        <Caret Line="212" Column="43" TopLine="186"/>
+        <Caret Line="30" Column="44" TopLine="16"/>
       </Position15>
       <Position16>
         <Filename Value="unit1.pas"/>
-        <Caret Line="213" Column="43" TopLine="187"/>
+        <Caret Line="16" Column="87" TopLine="1"/>
       </Position16>
       <Position17>
         <Filename Value="unit1.pas"/>
-        <Caret Line="214" Column="43" TopLine="188"/>
+        <Caret Line="11" Column="1" TopLine="1"/>
       </Position17>
       <Position18>
         <Filename Value="unit1.pas"/>
-        <Caret Line="209" Column="19" TopLine="188"/>
+        <Caret Line="20" Column="14" TopLine="1"/>
       </Position18>
       <Position19>
         <Filename Value="unit1.pas"/>
-        <Caret Line="208" Column="19" TopLine="187"/>
+        <Caret Line="182" Column="41" TopLine="161"/>
       </Position19>
       <Position20>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="202" Column="18" TopLine="188"/>
+        <Filename Value="..\..\Common\KromUtils.pas"/>
+        <Caret Line="7" Column="25" TopLine="1"/>
       </Position20>
       <Position21>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="209" Column="15" TopLine="188"/>
+        <Filename Value="..\..\Common\KromUtils.pas"/>
+        <Caret Line="6" Column="73" TopLine="1"/>
       </Position21>
       <Position22>
         <Filename Value="unit1.pas"/>
-        <Caret Line="50" Column="21" TopLine="48"/>
+        <Caret Line="11" Column="12" TopLine="1"/>
       </Position22>
       <Position23>
         <Filename Value="unit1.pas"/>
-        <Caret Line="51" Column="21" TopLine="49"/>
+        <Caret Line="105" Column="10" TopLine="90"/>
       </Position23>
-      <Position24>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="176" Column="24" TopLine="158"/>
-      </Position24>
-      <Position25>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="30" Column="44" TopLine="16"/>
-      </Position25>
-      <Position26>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="16" Column="87" TopLine="1"/>
-      </Position26>
-      <Position27>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="11" Column="1" TopLine="1"/>
-      </Position27>
-      <Position28>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="20" Column="14" TopLine="1"/>
-      </Position28>
-      <Position29>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="182" Column="41" TopLine="161"/>
-      </Position29>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
