--- a/Utils/uniteditor/uniteditor.lpi
+++ b/Utils/uniteditor/uniteditor.lpi
@@ -33,7 +33,7 @@
         <UnitName Value="uniteditor"/>
         <CursorPos X="2" Y="10"/>
         <TopLine Value="1"/>
-        <UsageCount Value="31"/>
+        <UsageCount Value="32"/>
       </Unit0>
       <Unit1>
         <Filename Value="unit1.pas"/>
@@ -41,10 +41,10 @@
         <ComponentName Value="Form1"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="10" Y="131"/>
-        <TopLine Value="116"/>
+        <CursorPos X="7" Y="190"/>
+        <TopLine Value="155"/>
         <EditorIndex Value="0"/>
-        <UsageCount Value="31"/>
+        <UsageCount Value="32"/>
         <Loaded Value="True"/>
       </Unit1>
       <Unit2>
@@ -69,14 +69,14 @@
       <Unit5>
         <Filename Value="..\..\Common\KromUtils.pas"/>
         <UnitName Value="KromUtils"/>
-        <CursorPos X="20" Y="7"/>
+        <CursorPos X="40" Y="7"/>
         <TopLine Value="1"/>
         <EditorIndex Value="1"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="11"/>
         <Loaded Value="True"/>
       </Unit5>
     </Units>
-    <JumpHistory Count="23" HistoryIndex="22">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
         <Filename Value="unit1.pas"/>
         <Caret Line="206" Column="39" TopLine="179"/>
@@ -169,6 +169,30 @@
         <Filename Value="unit1.pas"/>
         <Caret Line="105" Column="10" TopLine="90"/>
       </Position23>
+      <Position24>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="191" Column="4" TopLine="183"/>
+      </Position24>
+      <Position25>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="190" Column="8" TopLine="175"/>
+      </Position25>
+      <Position26>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="203" Column="41" TopLine="184"/>
+      </Position26>
+      <Position27>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="190" Column="7" TopLine="175"/>
+      </Position27>
+      <Position28>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="203" Column="42" TopLine="184"/>
+      </Position28>
+      <Position29>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="204" Column="20" TopLine="184"/>
+      </Position29>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
