--- a/Utils/uniteditor/uniteditor.lpi
+++ b/Utils/uniteditor/uniteditor.lpi
@@ -1,15 +1,17 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
+    <Version Value="9"/>
     <PathDelim Value="\"/>
-    <Version Value="7"/>
     <General>
       <MainUnit Value="0"/>
-      <TargetFileExt Value=".exe"/>
-      <Icon Value="0"/>
       <UseXPManifest Value="True"/>
-      <ActiveEditorIndexAtStart Value="0"/>
+      <Icon Value="0"/>
+      <ActiveWindowIndexAtStart Value="0"/>
     </General>
+    <BuildModes Count="1">
+      <Item1 Name="default" Default="True"/>
+    </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
       <IncludeFileFilter Value="*.(pas|pp|inc|lfm|lpr|lrs|lpi|lpk|sh|xml)"/>
@@ -31,9 +33,9 @@
         <Filename Value="uniteditor.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="uniteditor"/>
-        <CursorPos X="2" Y="10"/>
         <TopLine Value="1"/>
-        <UsageCount Value="32"/>
+        <CursorPos X="2" Y="10"/>
+        <UsageCount Value="33"/>
       </Unit0>
       <Unit1>
         <Filename Value="unit1.pas"/>
@@ -41,170 +43,183 @@
         <ComponentName Value="Form1"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="Unit1"/>
-        <CursorPos X="7" Y="190"/>
-        <TopLine Value="155"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="0"/>
-        <UsageCount Value="32"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="145"/>
+        <CursorPos X="27" Y="172"/>
+        <UsageCount Value="33"/>
         <Loaded Value="True"/>
+        <LoadedDesigner Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="..\..\..\..\lazarus\fpc\2.4.2\source\rtl\inc\objpash.inc"/>
-        <CursorPos X="26" Y="230"/>
         <TopLine Value="215"/>
+        <CursorPos X="26" Y="230"/>
         <UsageCount Value="10"/>
       </Unit2>
       <Unit3>
         <Filename Value="unit1.lrs"/>
-        <CursorPos X="1" Y="3"/>
         <TopLine Value="1"/>
+        <CursorPos X="1" Y="3"/>
         <UsageCount Value="10"/>
       </Unit3>
       <Unit4>
         <Filename Value="..\..\KM_Defaults.pas"/>
         <UnitName Value="KM_Defaults"/>
-        <CursorPos X="11" Y="357"/>
         <TopLine Value="340"/>
+        <CursorPos X="11" Y="357"/>
         <UsageCount Value="10"/>
       </Unit4>
       <Unit5>
         <Filename Value="..\..\Common\KromUtils.pas"/>
         <UnitName Value="KromUtils"/>
-        <CursorPos X="40" Y="7"/>
-        <TopLine Value="1"/>
         <EditorIndex Value="1"/>
-        <UsageCount Value="11"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="1"/>
+        <CursorPos X="40" Y="7"/>
+        <UsageCount Value="12"/>
         <Loaded Value="True"/>
       </Unit5>
     </Units>
-    <JumpHistory Count="29" HistoryIndex="28">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="unit1.pas"/>
-        <Caret Line="206" Column="39" TopLine="179"/>
+        <Caret Line="51" Column="21" TopLine="49"/>
       </Position1>
       <Position2>
         <Filename Value="unit1.pas"/>
-        <Caret Line="207" Column="39" TopLine="180"/>
+        <Caret Line="176" Column="24" TopLine="158"/>
       </Position2>
       <Position3>
         <Filename Value="unit1.pas"/>
-        <Caret Line="208" Column="39" TopLine="181"/>
+        <Caret Line="30" Column="44" TopLine="16"/>
       </Position3>
       <Position4>
         <Filename Value="unit1.pas"/>
-        <Caret Line="158" Column="50" TopLine="146"/>
+        <Caret Line="16" Column="87" TopLine="1"/>
       </Position4>
       <Position5>
         <Filename Value="unit1.pas"/>
-        <Caret Line="212" Column="43" TopLine="186"/>
+        <Caret Line="11" Column="1" TopLine="1"/>
       </Position5>
       <Position6>
         <Filename Value="unit1.pas"/>
-        <Caret Line="213" Column="43" TopLine="187"/>
+        <Caret Line="20" Column="14" TopLine="1"/>
       </Position6>
       <Position7>
         <Filename Value="unit1.pas"/>
-        <Caret Line="214" Column="43" TopLine="188"/>
+        <Caret Line="182" Column="41" TopLine="161"/>
       </Position7>
       <Position8>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="209" Column="19" TopLine="188"/>
+        <Filename Value="..\..\Common\KromUtils.pas"/>
+        <Caret Line="7" Column="25" TopLine="1"/>
       </Position8>
       <Position9>
-        <Filename Value="unit1.pas"/>
-        <Caret Line="208" Column="19" TopLine="187"/>
+        <Filename Value="..\..\Common\KromUtils.pas"/>
+        <Caret Line="6" Column="73" TopLine="1"/>
       </Position9>
       <Position10>
         <Filename Value="unit1.pas"/>
-        <Caret Line="202" Column="18" TopLine="188"/>
+        <Caret Line="11" Column="12" TopLine="1"/>
       </Position10>
       <Position11>
         <Filename Value="unit1.pas"/>
-        <Caret Line="209" Column="15" TopLine="188"/>
+        <Caret Line="105" Column="10" TopLine="90"/>
       </Position11>
       <Position12>
         <Filename Value="unit1.pas"/>
-        <Caret Line="50" Column="21" TopLine="48"/>
+        <Caret Line="191" Column="4" TopLine="183"/>
       </Position12>
       <Position13>
         <Filename Value="unit1.pas"/>
-        <Caret Line="51" Column="21" TopLine="49"/>
+        <Caret Line="190" Column="8" TopLine="175"/>
       </Position13>
       <Position14>
         <Filename Value="unit1.pas"/>
-        <Caret Line="176" Column="24" TopLine="158"/>
+        <Caret Line="203" Column="41" TopLine="184"/>
       </Position14>
       <Position15>
         <Filename Value="unit1.pas"/>
-        <Caret Line="30" Column="44" TopLine="16"/>
+        <Caret Line="190" Column="7" TopLine="175"/>
       </Position15>
       <Position16>
         <Filename Value="unit1.pas"/>
-        <Caret Line="16" Column="87" TopLine="1"/>
+        <Caret Line="203" Column="42" TopLine="184"/>
       </Position16>
       <Position17>
         <Filename Value="unit1.pas"/>
-        <Caret Line="11" Column="1" TopLine="1"/>
+        <Caret Line="204" Column="20" TopLine="184"/>
       </Position17>
       <Position18>
         <Filename Value="unit1.pas"/>
-        <Caret Line="20" Column="14" TopLine="1"/>
+        <Caret Line="190" Column="7" TopLine="103"/>
       </Position18>
       <Position19>
         <Filename Value="unit1.pas"/>
-        <Caret Line="182" Column="41" TopLine="161"/>
+        <Caret Line="194" Column="7" TopLine="1"/>
       </Position19>
       <Position20>
-        <Filename Value="..\..\Common\KromUtils.pas"/>
-        <Caret Line="7" Column="25" TopLine="1"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="147" Column="7" TopLine="129"/>
       </Position20>
       <Position21>
-        <Filename Value="..\..\Common\KromUtils.pas"/>
-        <Caret Line="6" Column="73" TopLine="1"/>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="133" Column="17" TopLine="111"/>
       </Position21>
       <Position22>
         <Filename Value="unit1.pas"/>
-        <Caret Line="11" Column="12" TopLine="1"/>
+        <Caret Line="147" Column="1" TopLine="127"/>
       </Position22>
       <Position23>
         <Filename Value="unit1.pas"/>
-        <Caret Line="105" Column="10" TopLine="90"/>
+        <Caret Line="11" Column="17" TopLine="1"/>
       </Position23>
       <Position24>
         <Filename Value="unit1.pas"/>
-        <Caret Line="191" Column="4" TopLine="183"/>
+        <Caret Line="133" Column="17" TopLine="118"/>
       </Position24>
       <Position25>
         <Filename Value="unit1.pas"/>
-        <Caret Line="190" Column="8" TopLine="175"/>
+        <Caret Line="11" Column="8" TopLine="6"/>
       </Position25>
       <Position26>
         <Filename Value="unit1.pas"/>
-        <Caret Line="203" Column="41" TopLine="184"/>
+        <Caret Line="130" Column="19" TopLine="136"/>
       </Position26>
       <Position27>
         <Filename Value="unit1.pas"/>
-        <Caret Line="190" Column="7" TopLine="175"/>
+        <Caret Line="160" Column="5" TopLine="144"/>
       </Position27>
       <Position28>
         <Filename Value="unit1.pas"/>
-        <Caret Line="203" Column="42" TopLine="184"/>
+        <Caret Line="159" Column="5" TopLine="143"/>
       </Position28>
       <Position29>
         <Filename Value="unit1.pas"/>
-        <Caret Line="204" Column="20" TopLine="184"/>
+        <Caret Line="62" Column="19" TopLine="44"/>
       </Position29>
+      <Position30>
+        <Filename Value="unit1.pas"/>
+        <Caret Line="149" Column="31" TopLine="134"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="8"/>
+    <Version Value="9"/>
     <PathDelim Value="\"/>
     <Target>
       <Filename Value="uniteditor"/>
     </Target>
     <SearchPaths>
-      <IncludeFiles Value="$(ProjOutDir)\;..\..\Common\"/>
-      <OtherUnitFiles Value="..\..\Common\"/>
+      <IncludeFiles Value="$(ProjOutDir);..\..\Common"/>
+      <OtherUnitFiles Value="..\..\Common"/>
     </SearchPaths>
+    <Parsing>
+      <SyntaxOptions>
+        <UseAnsiStrings Value="False"/>
+      </SyntaxOptions>
+    </Parsing>
     <Linking>
       <Options>
         <Win32>
