GetCharFromVirtualKey function not used and not compile on Linux so I comment it out for now.

--- a/KaM_Remake.lpi
+++ b/KaM_Remake.lpi
@@ -63,10 +63,11 @@
       <Unit2>
         <Filename Value="Common\KromUtils.pas"/>
         <UnitName Value="KromUtils"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="37"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="424"/>
-        <CursorPos X="33" Y="441"/>
+        <TopLine Value="59"/>
+        <CursorPos X="3" Y="74"/>
         <UsageCount Value="19"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -202,7 +203,7 @@
         <WindowIndex Value="0"/>
         <TopLine Value="174"/>
         <CursorPos X="3" Y="193"/>
-        <UsageCount Value="137"/>
+        <UsageCount Value="138"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit16>
@@ -224,7 +225,7 @@
         <UnitName Value="KM_Defaults"/>
         <EditorIndex Value="38"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="422"/>
+        <TopLine Value="1"/>
         <CursorPos X="55" Y="439"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
@@ -349,7 +350,7 @@
         <UnitName Value="KM_Player"/>
         <EditorIndex Value="26"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="542"/>
+        <TopLine Value="521"/>
         <CursorPos X="3" Y="557"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
@@ -395,7 +396,6 @@
         <Filename Value="KM_ResourceGFX.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_ResourceGFX"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="17"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
@@ -744,7 +744,7 @@
         <WindowIndex Value="0"/>
         <TopLine Value="117"/>
         <CursorPos X="24" Y="134"/>
-        <UsageCount Value="38"/>
+        <UsageCount Value="39"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit74>
@@ -792,7 +792,7 @@
         <UnitName Value="KM_UnitTaskAttackHouse"/>
         <TopLine Value="14"/>
         <CursorPos X="22" Y="27"/>
-        <UsageCount Value="29"/>
+        <UsageCount Value="30"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit80>
       <Unit81>
@@ -879,7 +879,7 @@
         <WindowIndex Value="0"/>
         <TopLine Value="27"/>
         <CursorPos X="49" Y="27"/>
-        <UsageCount Value="26"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit90>
@@ -970,8 +970,8 @@
         <UnitName Value="KM_GameInputProcess"/>
         <EditorIndex Value="25"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="129"/>
-        <CursorPos X="6" Y="146"/>
+        <TopLine Value="392"/>
+        <CursorPos X="1" Y="359"/>
         <UsageCount Value="11"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -1051,7 +1051,7 @@
         <UsageCount Value="10"/>
       </Unit107>
     </Units>
-    <JumpHistory Count="9" HistoryIndex="8">
+    <JumpHistory Count="11" HistoryIndex="10">
       <Position1>
         <Filename Value="KM_Unit1.pas"/>
         <Caret Line="523" Column="44" TopLine="506"/>
@@ -1088,6 +1088,14 @@
         <Filename Value="KM_ResourceGFX.pas"/>
         <Caret Line="309" Column="18" TopLine="292"/>
       </Position9>
+      <Position10>
+        <Filename Value="KM_ResourceGFX.pas"/>
+        <Caret Line="7" Column="25" TopLine="1"/>
+      </Position10>
+      <Position11>
+        <Filename Value="Common\KromUtils.pas"/>
+        <Caret Line="455" Column="3" TopLine="429"/>
+      </Position11>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
