--- a/Utils/Network Test/KaMNetworkTest.lpi
+++ b/Utils/Network Test/KaMNetworkTest.lpi
@@ -7,7 +7,7 @@
       <MainUnit Value="0"/>
       <TargetFileExt Value=""/>
       <UseXPManifest Value="True"/>
-      <ActiveEditorIndexAtStart Value="2"/>
+      <ActiveEditorIndexAtStart Value="3"/>
     </General>
     <VersionInfo>
       <Language Value=""/>
@@ -144,14 +144,14 @@
         <Filename Value="..\..\Common\Overbyte ICS\WSocket.pas"/>
         <UnitName Value="WSocket"/>
         <CursorPos X="2" Y="635"/>
-        <TopLine Value="745"/>
+        <TopLine Value="619"/>
         <EditorIndex Value="3"/>
         <UsageCount Value="10"/>
         <Loaded Value="True"/>
         <SyntaxHighlighter Value="Delphi"/>
       </Unit13>
     </Units>
-    <JumpHistory Count="2" HistoryIndex="1">
+    <JumpHistory Count="3" HistoryIndex="2">
       <Position1>
         <Filename Value="..\..\KM_Network.pas"/>
         <Caret Line="1" Column="1" TopLine="1"/>
@@ -160,6 +160,10 @@
         <Filename Value="..\..\Common\Overbyte ICS\WSocket.pas"/>
         <Caret Line="1" Column="1" TopLine="1"/>
       </Position2>
+      <Position3>
+        <Filename Value="..\..\Common\Overbyte ICS\WSocket.pas"/>
+        <Caret Line="635" Column="2" TopLine="635"/>
+      </Position3>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
