--- a/KaM Editor/KM_Editor.lpi
+++ b/KaM Editor/KM_Editor.lpi
@@ -8,7 +8,7 @@
       <TargetFileExt Value=".exe"/>
       <Icon Value="0"/>
       <UseXPManifest Value="True"/>
-      <ActiveEditorIndexAtStart Value="0"/>
+      <ActiveEditorIndexAtStart Value="2"/>
     </General>
     <VersionInfo>
       <ProjectVersion Value=""/>
@@ -24,7 +24,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
-        <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
+        <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T 'Lazarus Run Output' -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
     <RequiredPackages Count="1">
@@ -32,15 +32,14 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="22">
+    <Units Count="26">
       <Unit0>
         <Filename Value="KM_Editor.lpr"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="KM_Editor"/>
         <CursorPos X="18" Y="6"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="0"/>
-        <UsageCount Value="26"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="27"/>
       </Unit0>
       <Unit1>
         <Filename Value="KM_Unit1.pas"/>
@@ -49,31 +48,25 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="KM_Unit1"/>
-        <CursorPos X="30" Y="222"/>
-        <TopLine Value="211"/>
-        <EditorIndex Value="2"/>
-        <UsageCount Value="26"/>
-        <Loaded Value="True"/>
+        <CursorPos X="14" Y="7"/>
+        <TopLine Value="1"/>
+        <UsageCount Value="27"/>
       </Unit1>
       <Unit2>
         <Filename Value="KM_Defaults.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Defaults"/>
         <CursorPos X="5" Y="331"/>
-        <TopLine Value="296"/>
-        <EditorIndex Value="11"/>
-        <UsageCount Value="26"/>
-        <Loaded Value="True"/>
+        <TopLine Value="299"/>
+        <UsageCount Value="27"/>
       </Unit2>
       <Unit3>
         <Filename Value="KM_Render.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="KM_Render"/>
-        <CursorPos X="1" Y="3"/>
+        <CursorPos X="6" Y="5"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="10"/>
-        <UsageCount Value="26"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="27"/>
       </Unit3>
       <Unit4>
         <Filename Value="KM_ReadGFX1.pas"/>
@@ -81,9 +74,7 @@
         <UnitName Value="KM_ReadGFX1"/>
         <CursorPos X="29" Y="20"/>
         <TopLine Value="5"/>
-        <EditorIndex Value="5"/>
-        <UsageCount Value="26"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="27"/>
       </Unit4>
       <Unit5>
         <Filename Value="KM_Form_NewMap.pas"/>
@@ -94,9 +85,7 @@
         <UnitName Value="KM_Form_NewMap"/>
         <CursorPos X="37" Y="2"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="1"/>
-        <UsageCount Value="26"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="27"/>
       </Unit5>
       <Unit6>
         <Filename Value="KM_Form_Loading.pas"/>
@@ -107,9 +96,7 @@
         <UnitName Value="KM_Form_Loading"/>
         <CursorPos X="1" Y="26"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="4"/>
-        <UsageCount Value="26"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="27"/>
       </Unit6>
       <Unit7>
         <Filename Value="KM_LoadDAT.pas"/>
@@ -117,9 +104,7 @@
         <UnitName Value="KM_LoadDAT"/>
         <CursorPos X="69" Y="3"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="8"/>
-        <UsageCount Value="26"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="27"/>
       </Unit7>
       <Unit8>
         <Filename Value="KM_TPlayer.pas"/>
@@ -127,9 +112,7 @@
         <UnitName Value="KM_TPlayer"/>
         <CursorPos X="27" Y="4"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="7"/>
-        <UsageCount Value="26"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="27"/>
       </Unit8>
       <Unit9>
         <Filename Value="KM_MapSettings.pas"/>
@@ -151,9 +134,7 @@
         <UnitName Value="KM_TGATexture"/>
         <CursorPos X="15" Y="16"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="9"/>
-        <UsageCount Value="26"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="27"/>
       </Unit11>
       <Unit12>
         <Filename Value="KM_Editor.dpr"/>
@@ -166,9 +147,7 @@
         <Filename Value="KM_Unit1.lfm"/>
         <CursorPos X="1" Y="1"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="3"/>
         <UsageCount Value="12"/>
-        <Loaded Value="True"/>
         <SyntaxHighlighter Value="LFM"/>
       </Unit13>
       <Unit14>
@@ -190,9 +169,7 @@
         <UnitName Value="KromUtils"/>
         <CursorPos X="1" Y="3"/>
         <TopLine Value="1"/>
-        <EditorIndex Value="6"/>
         <UsageCount Value="13"/>
-        <Loaded Value="True"/>
       </Unit16>
       <Unit17>
         <Filename Value="..\ Common \ColorPicker.lrs"/>
@@ -225,137 +202,75 @@
         <TopLine Value="1933"/>
         <UsageCount Value="10"/>
       </Unit21>
+      <Unit22>
+        <Filename Value="..\Common\KromUtils.pas"/>
+        <UnitName Value="KromUtils"/>
+        <CursorPos X="19" Y="446"/>
+        <TopLine Value="430"/>
+        <EditorIndex Value="1"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit22>
+      <Unit23>
+        <Filename Value="..\Common\dglOpenGL.pas"/>
+        <UnitName Value="dglOpenGL"/>
+        <CursorPos X="121" Y="13196"/>
+        <TopLine Value="461"/>
+        <EditorIndex Value="2"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit23>
+      <Unit24>
+        <Filename Value="..\Utils\TileResampler\Unit1.dfm"/>
+        <CursorPos X="1" Y="1"/>
+        <TopLine Value="27"/>
+        <UsageCount Value="10"/>
+        <SyntaxHighlighter Value="LFM"/>
+      </Unit24>
+      <Unit25>
+        <Filename Value="..\Utils\TileResampler\Unit1.pas"/>
+        <UnitName Value="Unit1"/>
+        <CursorPos X="57" Y="5"/>
+        <TopLine Value="1"/>
+        <EditorIndex Value="0"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit25>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="6" HistoryIndex="5">
       <Position1>
-        <Filename Value="KM_Form_NewMap.pas"/>
-        <Caret Line="115" Column="10" TopLine="114"/>
+        <Filename Value="..\Common\KromUtils.pas"/>
+        <Caret Line="446" Column="19" TopLine="430"/>
       </Position1>
       <Position2>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="404" Column="25" TopLine="386"/>
+        <Filename Value="..\Common\dglOpenGL.pas"/>
+        <Caret Line="685" Column="27" TopLine="669"/>
       </Position2>
       <Position3>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="1389" Column="20" TopLine="1378"/>
+        <Filename Value="..\Common\dglOpenGL.pas"/>
+        <Caret Line="470" Column="45" TopLine="461"/>
       </Position3>
       <Position4>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="1397" Column="10" TopLine="1379"/>
+        <Filename Value="..\Common\dglOpenGL.pas"/>
+        <Caret Line="13196" Column="121" TopLine="13180"/>
       </Position4>
       <Position5>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="358" Column="1" TopLine="340"/>
+        <Filename Value="..\Common\dglOpenGL.pas"/>
+        <Caret Line="9820" Column="125" TopLine="9804"/>
       </Position5>
       <Position6>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="1397" Column="47" TopLine="1379"/>
+        <Filename Value="..\Common\dglOpenGL.pas"/>
+        <Caret Line="17859" Column="1" TopLine="17828"/>
       </Position6>
-      <Position7>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="1392" Column="21" TopLine="1379"/>
-      </Position7>
-      <Position8>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="419" Column="10" TopLine="407"/>
-      </Position8>
-      <Position9>
-        <Filename Value="KM_Form_NewMap.pas"/>
-        <Caret Line="2" Column="1" TopLine="1"/>
-      </Position9>
-      <Position10>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="335" Column="1" TopLine="317"/>
-      </Position10>
-      <Position11>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="1265" Column="1" TopLine="1262"/>
-      </Position11>
-      <Position12>
-        <Filename Value="KM_Form_NewMap.pas"/>
-        <Caret Line="92" Column="12" TopLine="78"/>
-      </Position12>
-      <Position13>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="1274" Column="15" TopLine="1262"/>
-      </Position13>
-      <Position14>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="435" Column="49" TopLine="421"/>
-      </Position14>
-      <Position15>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="443" Column="1" TopLine="426"/>
-      </Position15>
-      <Position16>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="765" Column="1" TopLine="747"/>
-      </Position16>
-      <Position17>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="1179" Column="1" TopLine="1165"/>
-      </Position17>
-      <Position18>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="1254" Column="5" TopLine="1229"/>
-      </Position18>
-      <Position19>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="1279" Column="1" TopLine="1261"/>
-      </Position19>
-      <Position20>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="1321" Column="1" TopLine="1305"/>
-      </Position20>
-      <Position21>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="221" Column="87" TopLine="203"/>
-      </Position21>
-      <Position22>
-        <Filename Value="KM_Form_Loading.pas"/>
-        <Caret Line="3" Column="1" TopLine="1"/>
-      </Position22>
-      <Position23>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="382" Column="56" TopLine="380"/>
-      </Position23>
-      <Position24>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="707" Column="1" TopLine="689"/>
-      </Position24>
-      <Position25>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="1060" Column="5" TopLine="1044"/>
-      </Position25>
-      <Position26>
-        <Filename Value="KM_Form_Loading.pas"/>
-        <Caret Line="97" Column="3" TopLine="78"/>
-      </Position26>
-      <Position27>
-        <Filename Value="KM_Form_Loading.pas"/>
-        <Caret Line="68" Column="11" TopLine="53"/>
-      </Position27>
-      <Position28>
-        <Filename Value="KM_Unit1.pas"/>
-        <Caret Line="718" Column="64" TopLine="683"/>
-      </Position28>
-      <Position29>
-        <Filename Value="KM_Form_NewMap.pas"/>
-        <Caret Line="98" Column="1" TopLine="83"/>
-      </Position29>
-      <Position30>
-        <Filename Value="KM_Form_Loading.pas"/>
-        <Caret Line="54" Column="34" TopLine="53"/>
-      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="8"/>
     <PathDelim Value="\"/>
     <SearchPaths>
-      <IncludeFiles Value="..\ Common \"/>
-      <OtherUnitFiles Value="..\ Common \"/>
-      <SrcPath Value="..\ Common \"/>
+      <IncludeFiles Value="..\Common\"/>
+      <OtherUnitFiles Value="..\Common\"/>
+      <SrcPath Value="..\Common\"/>
     </SearchPaths>
     <CodeGeneration>
       <Checks>
